--- a/cinePop/app_inicial_e_cadastro/templates/paginaInicial/home.html
+++ b/cinePop/app_inicial_e_cadastro/templates/paginaInicial/home.html
@@ -3,60 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo de Filmes</title>
+    <title>Brasil Cultura</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../static/style.css">
     <style>
         body {
-            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
         }
-        .header {
-            background-color: #343a40;
-            color: #ffffff;
-            padding: 20px 0;
+
+        header {
+            background: linear-gradient(to right, #000, #8A2BE2); 
+            color: white;
+            padding: 10px 0;
         }
-        .container {
-            margin-top: 20px;
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
         }
-        .movie-card {
-            background-color: #ffffff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            margin-bottom: 20px;
-            padding: 20px;
+
+        nav li {
+            margin: 0 15px;
+            cursor: pointer;
+        }
+
+        .filme {
+            margin: 20px;
+            padding: 10px;
+            display: inline-block;
+            width: 30%; 
+            text-align: center;
+        }
+
+        h1, h2, p {
+            color: whitesmoke;
         }
     </style>
 </head>
 <body>
-    <div class="header text-center">
-        <h1>Brasil Cultura</h1>
-        <p>Explore nossos filmes incríveis</p>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="movie-card">
-                    <h2>Filme 1</h2>
-                    <p>Descrição do Filme 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#">Saiba mais</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="movie-card">
-                    <h2>Filme 2</h2>
-                    <p>Descrição do Filme 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#">Saiba mais</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="movie-card">
-                    <h2>Filme 3</h2>
-                    <p>Descrição do Filme 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#">Saiba mais</a>
-                </div>
-            </div>
+    <header>
+        <div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Lançamentos</li>
+                    <li>Populares</li>
+                    <li>Watchlist</li>
+                    <li>Esporte</li>
+                    <li>Guia</li>
+                    <li><input class="form-control" type="text" name="filme"></li>
+                    <li><input class="btn btn-warning" type="submit" value="Logar"></li>
+                    <li><input class="btn btn-info" type="submit" value="Cadastrar"></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+    </header>
+
+    <section>
+        <h1>Bem vindo ao Brasil Cultura</h1>
+
+        <p>Ficamos feliz por você estar aqui. No Brasil cultura você pode achar seus filmes favoritos e séries de TV de uma forma simples e fácil.</p>
+        <p>Usar o nosso site é rápido e eficiente: bastar buscar o nome do filme e descubrir onde pode assisti-lo.</p>
+        <p>Ache o filme perfeito para assistir hoje à noite usando o filtro por gênero e ano de lançamento.</p>
+    </section>
+
+    <section class="filmes">
+        <div class="filme">
+            <h2>Bacurau</h2>
+            <p>Informações sobre o Filme 1</p>
+            <iframe width="300" height="169" src="https://www.youtube.com/embed/qlheaoLnewE?si=wAHYugsQDnP3Htqn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+
+        <div class="filme">
+            <h2>Auto da compadecida</h2>
+            <p>Informações sobre o Filme 2</p>
+            <iframe width="300" height="169" src="https://www.youtube.com/embed/XPuMu_ENzlg?si=0K3g0SxerwNBsA3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
