--- a/cinePop/app_inicial_e_cadastro/templates/paginaInicial/home.html
+++ b/cinePop/app_inicial_e_cadastro/templates/paginaInicial/home.html
@@ -3,87 +3,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brasil Cultura</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/style.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background: linear-gradient(to right, #000, #8A2BE2); 
-            color: white;
-            padding: 10px 0;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-        }
-
-        nav li {
-            margin: 0 15px;
-            cursor: pointer;
-        }
-
-        .filme {
-            margin: 20px;
-            padding: 10px;
-            display: inline-block;
-            width: 30%; 
-            text-align: center;
-        }
-
-        h1, h2, p {
-            color: whitesmoke;
-        }
-    </style>
+    <link rel="stylesheet" href="../../static/css/inicial.css">
+    <title>Homepage</title>
 </head>
 <body>
-    <header>
-        <div>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Lançamentos</li>
-                    <li>Populares</li>
-                    <li>Watchlist</li>
-                    <li>Esporte</li>
-                    <li>Guia</li>
-                    <li><input class="form-control" type="text" name="filme"></li>
-                    <li><input class="btn btn-warning" type="submit" value="Logar"></li>
-                    <li><input class="btn btn-info" type="submit" value="Cadastrar"></li>
-                </ul>
-            </nav>
+<header>
+
+    <img class='img1' src="../../static/imgs/08.jpeg" alt="Descrição da Imagem">
+    <navbar class='navbar'>
+        <ul>
+        <li>Home<li>
+        <li>criticas<li>
+        <li>em cinema<li>
+        <li>em breve<li>
+        <li>genero<li>
+        <li>void<li>
+        <li>Streaming<li>
+        </ul>
+    </navbar>
+  
+</header>
+<section>
+    <div class='flex'>
+        <div> 
+            <img class='img' src="../../static/imgs/01.jpeg" alt="Descrição da Imagem">
         </div>
-    </header>
-
-    <section>
-        <h1>Bem vindo ao Brasil Cultura</h1>
-
-        <p>Ficamos feliz por você estar aqui. No Brasil cultura você pode achar seus filmes favoritos e séries de TV de uma forma simples e fácil.</p>
-        <p>Usar o nosso site é rápido e eficiente: bastar buscar o nome do filme e descubrir onde pode assisti-lo.</p>
-        <p>Ache o filme perfeito para assistir hoje à noite usando o filtro por gênero e ano de lançamento.</p>
-    </section>
-
-    <section class="filmes">
-        <div class="filme">
-            <h2>Bacurau</h2>
-            <p>Informações sobre o Filme 1</p>
-            <iframe width="300" height="169" src="https://www.youtube.com/embed/qlheaoLnewE?si=wAHYugsQDnP3Htqn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div> 
+            <img class='img' src="../../static/imgs/download.jpeg" alt="Descrição da Imagem">
         </div>
-
-        <div class="filme">
-            <h2>Auto da compadecida</h2>
-            <p>Informações sobre o Filme 2</p>
-            <iframe width="300" height="169" src="https://www.youtube.com/embed/XPuMu_ENzlg?si=0K3g0SxerwNBsA3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div> 
+            <img class='img' src="../../static/imgs/02.jpeg" alt="Descrição da Imagem">
         </div>
-    </section>
+        <div> 
+            <img class='img' src="../../static/imgs/03.jpeg" alt="Descrição da Imagem">
+        </div>
+        <div> 
+            <img class='img' src="../../static/imgs/04.jpeg" alt="Descrição da Imagem">
+        </div>
+        <div> 
+            <img class='img' src="../../static/imgs/05.jpeg" alt="Descrição da Imagem">
+        </div>
+        <div> 
+            <img class='img' src="../../static/imgs/06.jpeg" alt="Descrição da Imagem">
+        </div>
+        <div> 
+            <img class='img' src="../../static/imgs/07.jpeg" alt="Descrição da Imagem">
+        </div>
+    </div>
+</section>
+<section>
+    <h1 class='destaque'>Destaque dessa semana</h1>
+    <div class='margin' >
+      <div>
+       <h2 class='fonts'>
+        1. Alta da Compadecida
+       </h2>
+        <iframe width="260" height="315" src="https://www.youtube.com/embed/DN_OwWRHU5U?si=Te741UV7Lgk-ovD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        </p>
+    </div>
+      <div>
+        <h2 class='fonts'>
+         2. Ataque dos Vermes Malditos
+        </h2>
+        <iframe width="360" height="315" src="https://www.youtube.com/embed/1KyEbIdeLK4?si=G1FHiz8AQB6Wbb2O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p>
+
+        </p>
+    </div>
+    <div>
+        <h2 class='fonts'>
+         3. shaolin do sertao
+        </h2>
+        <iframe width="260" height="315" src="https://www.youtube.com/embed/XuzSIm3ZLXU?si=lex8AgGkv9GGpjwW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p>
+
+    </p>
+    </div>
+    <div>
+        <h2 class='fonts'>
+          4.Ghost: Do Outro Lado da Vida
+        </h2>
+         <iframe width="360" height="315" src="https://www.youtube.com/embed/b25yHLzdn7g?si=1E7CwZ07bBft9y2w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p>
+
+    </p>
+    </div>
+    <div>
+        <h2 class='fonts'>
+          5.Barbie
+        </h2>
+        <iframe width="360" height="315" src="https://www.youtube.com/embed/Ujs1Ud7k49M?si=y6PASDfNqJ69mVoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p>
+
+    </p>
+    </div>
+    <div>
+        <h2 class='fonts'>
+          6.Big hero
+        </h2>
+        <iframe width="360" height="315" src="https://www.youtube.com/embed/Zx3xEc6-mU4?si=lSIytwhPSR3IcrlD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p>
+
+    </p>
+    </div>
+    <div>
+        <h2 class='fonts'>
+          7.Megan
+        </h2>
+        <iframe width="360" height="315" src="https://www.youtube.com/embed/JcKRaUGJcqY?si=g6yd30qAzTHta__k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p>
+
+    </p>
+    </div>
+    <div>
+        <h2 class='fonts'>
+          8.Avenue 5 
+        </h2>
+        <iframe width="360" height="315" src="https://www.youtube.com/embed/xxMv8pPN8Po?si=7d8vOIN3gKiF3T_h" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p>
+
+    </p>
+    </div>
+</div>
+<footer>
+<div class=flex>
+    <div>
+    </h2>
+     fale com conosco
+ </h2>
+ <p>
+     83962225587
+ </p>
+ </div>
+ <div>
+    <img class='img2' src="../../static/imgs/insta.webp" alt="Descrição da Imagem">
+ </div>
+ <div>
+    <img class='img2' src="../../static/imgs/whats.webp" alt="Descrição da Imagem">
+ </div>
+</div>
+</footer>
+
+</section>
+
+    <script src="../../static/js/script.js"></script>
 </body>
 </html>
