--- a/cinePop/app_inicial_e_cadastro/templates/cadastroUsuarios/cadastro.html
+++ b/cinePop/app_inicial_e_cadastro/templates/cadastroUsuarios/cadastro.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/style.css">
+    <link rel="stylesheet" href="../../static/css/style.css">
     <title>Cadastro</title>
 </head>
 <body>
    <div id="from">
-    <form action="{% url 'listagem_usuarios' %}" method="post">
+    <form action="{% url 'cadastro' %}" method="post">
         {% csrf_token %}
         <h2 class="title">
             Cadastro
         </h2> 
         <label for="username">Nome</label>
         <div class="input">
-            <input class="form-control form-control-md" id="username" name="nome" placeholder="username" type="text" required>
+            <input class="form-control form-control-md" id="username" name="username" placeholder="username" type="text" required>
         </div>
         <label for="email"> Email</label>
         <div class="input">
