--- a/cinePop/app_inicial_e_cadastro/templates/login/login.html
+++ b/cinePop/app_inicial_e_cadastro/templates/login/login.html
@@ -1,15 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/style.css">
+    <link rel="stylesheet" href="../../static/css/style.css">
     <title>Login</title>
 </head>
 <body>
    <div id="from" class="mx-auto" style="width: 300px;">
-    <form action="" method="post">
+    <form action="{% url 'login' %}" method="post">
+        {% csrf_token %}
         <h2 class="title">
             Login 
         </h2> 
@@ -17,10 +19,7 @@
         <div class="input">
             <input class="form-control" id="username" name="username" placeholder="Username" type="text" required>
         </div>
-        <label for="email"> Email</label>
-        <div class="input">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="text" required>
-        </div>
+        
         <label for="senha">Senha</label>
         <div>
             <input class="form-control" id="senha" name="senha" placeholder="Senha" type="password" minlength="8" required>
@@ -32,5 +31,7 @@
    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+   <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
